      version is approximately 2-3x faster at parsing a ``.kndx`` file.
      Which yields a measurable improvement for commands which have to
      read from the repository, such as a 1s => 0.75s improvement in
      ``bzr diff`` when there are changes to be shown.  (John Arbash Meinel)

    * Merge is now faster.  Depending on the scenario, it can be more than 2x
      faster. (Aaron Bentley)

  LIBRARY API BREAKS:

    * Deprecated dictionary ``bzrlib.option.SHORT_OPTIONS`` removed.
      Various globally-declared options have been removed, so plugins
      that previously said ``takes_options=['message']`` must now
      construct an Option object and provide appropriate help. Options
      are now required to provide a help string and it must comply with
      the style guide by being one or more sentences with an initial
      capital and final period. (Martin Pool)

  INTERNALS:

    * merge now uses iter_changes to calculate changes, which makes room for
      future performance increases.  It is also more consistent with other
      operations that perform comparisons, and reduces reliance on
      Tree.inventory.  (Aaron Bentley)

    * Most functions now accept ``bzrlib.revision.NULL_REVISION`` to indicate
      the null revision, and consider using ``None`` for this purpose
      deprecated.  (Aaron Bentley)

  TESTING:

    * Remove selftest ``--clean-output``, ``--numbered-dirs`` and
      ``--keep-output`` options, which are obsolete now that tests
      are done within directories in $TMPDIR.  (Martin Pool)


bzr 0.18rc1  2007-07-10

  BUGFIXES:

    * Do not suppress pipe errors, etc. in non-display commands
      (Alexander Belchenko, #87178)

    * Display a useful error message when the user requests to annotate
      a file that is not present in the specified revision.
      (James Westby, #122656)

    * Commands that use status flags now have a reference to 'help
      status-flags'.  (Daniel Watkins, #113436)
